--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,37 +1,38 @@
 <resources>
     <string name="app_name">AudioRecorder</string>
-    <string name="app_title">音频录音器</string>
+    <string name="app_title">Audio Recorder</string>
     
     <!-- Button Labels -->
-    <string name="start_recording">录音</string>
-    <string name="stop_recording">停止</string>
-    <string name="select_config">配置: 默认配置</string>
-    <string name="audio_config_format">配置: %s</string>
+    <string name="start_recording">Record</string>
+    <string name="stop_recording">Stop</string>
+    <string name="select_config">Config: Default Configuration</string>
+    <string name="audio_config_format">Config: %s</string>
     
     <!-- Status messages -->
-    <string name="ready_to_record">准备录音</string>
-    <string name="recording">正在录音…</string>
-    <string name="recording_stopped">录音已停止</string>
-    <string name="error_occurred">发生错误</string>
-    <string name="status_preparing">准备中…</string>
-    <string name="status_stopping">停止中…</string>
+    <string name="status_ready">Ready to Record</string>
+    <string name="ready_to_record">Ready to Record</string>
+    <string name="recording">Recording…</string>
+    <string name="recording_stopped">Recording Stopped</string>
+    <string name="error_occurred">Error Occurred</string>
+    <string name="status_preparing">Preparing…</string>
+    <string name="status_stopping">Stopping…</string>
     
     <!-- File Info -->
-    <string name="file_info">配置: /data/audio_configs.json\n录音: /data/recorded_audio.wav\n\n支持多声道录音 (最大16声道)\n采样率: 8kHz-192kHz | 位深: 8/16/24/32bit</string>
-    <string name="file_info_with_config">配置: /data/audio_configs.json\n录音: /data/recorded_audio.wav\n\n%s\n\n支持多声道录音 (最大16声道)</string>
+    <string name="file_info">Config: /data/audio_configs.json\nRecording: /data/recorded_audio.wav\n\nSupports multi-channel recording (up to 16 channels)\nSample Rate: 8kHz-192kHz | Bit Depth: 8/16/24/32bit</string>
+    <string name="file_info_with_config">Config: /data/audio_configs.json\nRecording: /data/recorded_audio.wav\n\n%s\n\nSupports multi-channel recording (up to 16 channels)</string>
     
     <!-- Configuration section -->
-    <string name="recording_settings">录音设置</string>
-    <string name="config_info_default">当前使用默认配置</string>
-    <string name="config_info_format">采样率: %1$dHz | 声道: %2$s | 位深: %3$sbit</string>
-    <string name="channel_mono">单声道</string>
-    <string name="channel_stereo">立体声</string>
+    <string name="recording_settings">Recording Settings</string>
+    <string name="config_info_default">Currently using default configuration</string>
+    <string name="config_info_format">Sample Rate: %1$dHz | Channels: %2$s | Bit Depth: %3$sbit</string>
+    <string name="channel_mono">Mono</string>
+    <string name="channel_stereo">Stereo</string>
     
     <!-- Permission messages -->
-    <string name="permission_granted">权限已授予</string>
-    <string name="permission_required">需要录音权限才能使用此功能</string>
-    <string name="error_permission_denied">权限被拒绝</string>
+    <string name="permission_granted">Permission Granted</string>
+    <string name="permission_required">Recording permission required to use this feature</string>
+    <string name="error_permission_denied">Permission Denied</string>
     
     <!-- Error messages -->
-    <string name="error_recording_failed">录音失败</string>
+    <string name="error_recording_failed">Recording Failed</string>
 </resources>
